feat: Add Nigerian localization (Yorùbá, Igbo, Hausa) and complete screen suite
- Added Profile screen with user management
- Added Settings screen for app configuration
- Added Sex Timing screen for fertility tracking
- Added Nigerian language support (yo, ig, ha)
- Updated existing screens with localization
- Fixed navigation and UI improvements

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -76,4 +76,21 @@
   "genderFemale": "Femenino",
   "genderOther": "Otro",
   "selectGender": "Seleccionar Género"
+  ,
+  "profileTitle": "Perfil",
+  "editProfile": "Editar perfil",
+  "audioGuidance": "Guía de Audio",
+  "ttcHistory": "Historial TTC",
+  "faithPreference": "Preferencia de Fe",
+  "cycleLength": "Duración del Ciclo",
+  "lastPeriodDate": "Fecha de la Última Menstruación",
+  "continue": "Continuar",
+  "joined": "Registrado",
+  "audioLessons": "Aprendizaje de Audio",
+  "play": "Reproducir",
+  "stop": "Detener",
+  "supportHub": "Centro de Apoyo",
+  "dailyAffirmation": "Afirmaciones Diarias",
+  "chooseSupportMode": "Elige tu modo de apoyo",
+  "exploreCommunityGroups": "Explorar Grupos Comunitarios"
 }
